Ensure the frame tree node id is always set after setting the mojo channel.

The input router is recreated after a new input channel is constructed.
Ensure that the Frame Tree Node Id is set in all codepaths.

BUG=827267

Change-Id: Ie8c6a2665afccad23fdea9cfa0dc186c3b919455
Reviewed-on: https://chromium-review.googlesource.com/992357
Reviewed-by: Alex Moshchuk <alexmos@chromium.org>
Reviewed-by: Charlie Reis <creis@chromium.org>
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547884}
Former-commit-id: 92b0e115f1dda20d8a029c90917e5163023c30b4